# OpenGL-Linux

./: CMakeLists.txt
include/glad/: glad.h
src/: EBO.cpp  EBO.h  GUIDrawn.cpp  GUIDrawn.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  ball.cpp  ball.h  board.cpp  board.h  camera.cpp  camera.h  default.frag  default.vert  glad.c  imgui.ini  importer.cpp  importer.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  physics.cpp  physics.h  shaders.cpp  shaders.h  texture.cpp  texture.h
src/resources/shaders/: default.frag  default.vert
